can create and login with validation