@@ -4,10 +4,10 @@ import io.jsonwebtoken.SignatureAlgorithm;
 import org.springframework.stereotype.Component;
 
 import javax.crypto.spec.SecretKeySpec;
+import javax.xml.bind.DatatypeConverter;
 import java.io.FileReader;
 import java.io.IOException;
 import java.security.Key;
-import java.util.Arrays;
 import java.util.Base64;
 import java.util.Properties;
 
@@ -19,7 +19,7 @@ public class JwtConfig {
     public JwtConfig() throws IOException {
         Properties prop = new Properties();
         prop.load(new FileReader("src/main/resources/application.properties"));
-        byte[] saltyBytes = Base64.getUrlDecoder().decode(prop.getProperty("salt"));
+        byte[] saltyBytes = DatatypeConverter.parseBase64Binary(prop.getProperty("salt"));
         signingKey = new SecretKeySpec(saltyBytes, sigAlg.getJcaName());
     }
 
